Release 0.8 (dev)
=================
*

Release 0.7
===========
* fixes issue in mass_update due wrong indentaion
* fixed :ghissue:`49`
* removed options to enable/disable transactions during mass_update.
* fixed :ghissue:`60`


Release 0.6
===========
* fixed :ghissue:`55`
* fixed :ghissue:`51`
* added selenium tests
* pulled out tests from main package and use of py.test
* removed demoproject (use `make demo` instead)


Release 0.5
===========
* fix mass_update bug that caused all records in a table to be updated (thanks @jht001)
* Added timezone support to csv and xls export

Release 0.4
===========
* fixed :ghissue:`33`
* fixed :ghissue:`20`

Release 0.3
===========
* fixed :ghissue:`26`
* add feature to :ref:`use callable as columns <export_with_callable>`
* add feature to :ref:`export dictionaries <export_with_dictionaries>`
* new action :ref:`export_as_xls`
* added custom headers to :ref:`export_as_csv`
* new permission :ref:`adminactions_massupdate`
* new permission :ref:`adminactions_merge`

Release 0.2
============================
* improved :ref:`export_as_csv`
* Django 1.6 compatibility
* Added `modeladmin` in providing_args of signals: :ref:`adminaction_requested`, :ref:`adminaction_start`,  :ref:`adminaction_end`

Release 0.1
===========
* new api module
* pull out core export_csv functionalites as `_export_as_csv() <api.html#adminactions.export._export_as_csv>`_ to be used by custom code
* New exported filename callback for easy customize the filename ( see :ref:`filename_callbacks`)
* New registration shortcut `add_to_site() <api.html#adminactions.actions.add_to_site>`_
* New action: :ref:`merge`
* Fixed :ghissue:`9`
* Added :ref:`permissions`
* New signals: :ref:`adminaction_requested`, :ref:`adminaction_start`,  :ref:`adminaction_end`

Release 0.0.4
=============
* NEW added ``add_foreign_keys`` parameter to :ref:`export_as_fixture` and :ref:`export_delete_tree`
* NEW :ref:`export_delete_tree`
* renamed export_as_json as export_as_fixtures