@@ -1,7 +1,6 @@
 language: python
 python:
   - "2.7"
-  - "3.2"
   - "3.3"
   - "3.4"
 
@@ -42,13 +41,6 @@ matrix:
     - env: DJANGO=dev
 
   exclude:
-    - python: "3.2"
-      env: DJANGO=1.4.x
-    - python: "3.2"
-      env: DJANGO=1.5.x
-    - python: "3.2"
-      env: DJANGO=1.6.x
-
     - python: "3.3"
       env: DJANGO=1.4.x
     - python: "3.3"
