@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    {py27,py32,py33,py34,pypy}-{d14,d15,d16,d17,d18,dev}
+    {py27,py33,py34,pypy}-{d14,d15,d16,d17,d18,dev}
 
 [flake8]
 max-complexity = 12
@@ -33,8 +33,10 @@ whitelist_externals = make
                       /bin/sh
 
 commands =
-    py34-{d14,d15,d16}: echo "configuration not supported"
-    py27,py34-d17,py34-d18: make coverage
+;    py32-{d14,d15,d16}: echo "configuration not supported"
+;    py33-{d14,d15,d16}: echo "configuration not supported"
+;    py34-{d14,d15,d16}: echo "configuration not supported"
+    py27,{py33,py34,pypy}-{d17,d18}: make coverage
 
 deps=
     -r{toxinidir}/adminactions/requirements/testing.pip
